--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,7 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+
 }
 
 h1,
@@ -32,8 +33,8 @@ h6 {
   background-color: white;
 }
 
-#moveGalaxyBtn {
-  position: absolute;
-  bottom: 20px;
-  right: 20px;
+#moveGalaxyBtn, #supernovaBtn, #zoomBtn {
+  background-color: aqua; 
+  color: black;
+  border: none;
 }
