--- a/assets/iframe.css
+++ b/assets/iframe.css
@@ -33,6 +33,10 @@ main {
 .supernovaBtn:hover, .zoomBtn:hover, .moveGalaxyBtn:hover {
   background-color: rgba(10, 10, 10, 1);
 }
+.supernovaBtn:active, .zoomBtn:active, .moveGalaxyBtn:active {
+  outline: 2px solid rgba(255, 255, 255, 0.8);
+  outline-color: rgba(255, 255, 255, 0.8);
+}
 
 
 /* main {
