--- a/assets/iframe.css
+++ b/assets/iframe.css
@@ -16,29 +16,31 @@ main {
   overflow: hidden;
   margin: 0;
 }
+#buttonContainer {
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 20px; /* space between buttons */
+  justify-content: center;
+  align-items: center;
+  z-index: 10; /* make sure it's above the canvas */
+}
 
-.supernovaBtn, .zoomBtn, .moveGalaxyBtn {
-  font-family: "BBH Sans Bogle", sans-serif;
-  padding: 8px 16px;
-  font-weight: 400;
-  font-size: 25px;
-  border-radius: 8px;
-  background-color: rgba(10, 10, 10, 0.3);
-  color: #fff;
-  border: none;
+#buttonContainer button {
+  background: rgba(255, 255, 255, 0.1);
+  color: white;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  padding: 16px 8px;
+  border-radius: 6px;
   cursor: pointer;
-  transition: 0.2s;
+  transition: background 0.2s ease, transform 0.2s ease;
+  font-family: sans-serif;
 }
 
-.supernovaBtn:hover, .zoomBtn:hover, .moveGalaxyBtn:hover {
-  background-color: rgba(10, 10, 10, 1);
-}
-.supernovaBtn:active, .zoomBtn:active, .moveGalaxyBtn:active {
-  outline: 2px solid rgba(255, 255, 255, 0.8);
-  outline-color: rgba(255, 255, 255, 0.8);
+#buttonContainer button:hover {
+  background: rgba(255, 255, 255, 0.2);
+  transform: scale(1.05);
 }
 
-
-/* main {
-  height: 100%;
-} */
